# ms_templates

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{ cookiecutter.project }}/: README.md
{{ cookiecutter.project }}/src/layers/utils/python/core/: api_utils.py
{{ cookiecutter.project }}/src/{{ cookiecutter.service }}/: template.yaml
{{ cookiecutter.project }}/src/{{ cookiecutter.service }}/delete/: lambda_function.py
{{ cookiecutter.project }}/src/{{ cookiecutter.service }}/get/: lambda_function.py
{{ cookiecutter.project }}/src/{{ cookiecutter.service }}/post/: lambda_function.py
{{ cookiecutter.project }}/templates/: api.yaml  apiDeployment.yaml  layers.yaml  master_template.yaml
