[tool.poetry]
name = "ms-templates"
version = "0.1.0"
description = ""
authors = ["carlosanorve <carlos.anorve@millicom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
